<resources>
    <string name="app_name">hookingFish</string>

    <string name="title">HookingFish</string>
    <string name="button">Entrar</string>
    <string name="welcome">Seja bem vindo %1$s</string>
    <string name="Total">Total Geral</string>
    <string name="Kg">Peso</string>
    <string name="hanking">Hanking Geral</string>
    <string name="col1"> Nome</string>
    <string name="col2"> Mês</string>
    <string name="col3"> Total </string>
    <string name="col4"> Total Kg </string>
    <string name="leo"> Leonardo </string>
    <string name="pedro"> Pedro </string>
    <string name="rony"> Ronnyery</string>
    <string name="registerfish"> Cadastro de Informação do Peixe</string>
    <string name="infomes">Selecione o mês</string>
    <string name="infofish">Tipo de peixe</string>
    <string name="infoquant">Quantidade</string>
    <string name="infopeso">Digite o peso</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="jun">Junho</string>
    <string name="jul">Julho</string>
    <string name="ago">Agosto</string>
    <string name="sep">Setembro</string>
    <string name="oct">Outubro</string>
    <string name="nov">Novembro</string>
    <string name="dec">Dezembro</string>
    <string name="pira">Pirarara</string>
    <string name="tucuna">Tucunare</string>
    <string name="tamba">Tambaqui</string>
    <string name="matrin">Matrichan</string>
    <string name="tilapia">Tilápia</string>
    <string name="pintado">Pintado</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="save">Salvar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="does_not_have_account">Não tem uma conta? <b><font color="#000000">Cadastre-se</font></b></string>
    <string name="name">Nome</string>
    <string name="newpassword">Nova senha</string>
    <string name="forgive_passoword">Esqueceu sua senha? <b><font color="#000000">Clique aqui</font></b></string>
    <string name="register">Cadastrar</string>
    <string name="menu_home">Inicio </string>
    <string name="menu_champions">Meus campeonatos</string>
    <string name="menu_about">Sobre</string>
    <string name="social">Social</string>
    <string name="menu_modality">Modalidades</string>
    <string name="size">Tamanho</string>
    <string name="weight">Peso</string>
    <string name="amouth">Quantidade</string>
    <string name="select_modality">Vamos lá! Selecione a modalidade: </string>
    <string name="indivdual">Individual</string>
    <string name="dupla">Dupla</string>
    <string name="seu_campeonato_indivudual_ou_em_dupla">Seu campeonato é Individual ou em dupla?</string>
    <string name="campeonato_de_pesca">Campeonato de Pesca</string>
    <string name="data_de_inicio">Data de inicio</string>
    <string name="selecione_o_per_odo">Selecione o período: </string>
    <string name="salvar">Salvar</string>
    <string name="invalid_email">Email Inválido</string>
    <string name="invalid_password"> Senha Inválida</string>
    <string name="or">Ou</string>
    <string name="invalid_name">Nome Inválido\n</string>
    <string name="invalid_date">Dados Inválidos</string>


</resources>