<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgradient"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logofish" />


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/asul"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_gravity="center"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_input1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="70" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="70" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/does_not_have_account" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgive_passoword"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/button"
            android:layout_gravity="center"
            style="@style/Theme.Hooking.BUTTON."/>


    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>