<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgradient">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cap"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/quntidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/textcap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_campeonato_indivudual_ou_em_dupla"
        android:fontFamily="@font/asul"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonsquadA"
        style="@style/Theme.Hooking.BUTTON."
        android:text="@string/indivdual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcap1" />
    <Button
        android:id="@+id/buttonsduplaA"
        style="@style/Theme.Hooking.BUTTON."
        android:text="@string/dupla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsquadA" />

</androidx.constraintlayout.widget.ConstraintLayout>