<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgradient">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cap"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/tamanhofish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@id/textcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_campeonato_indivudual_ou_em_dupla"
        android:fontFamily="@font/asul"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap"
        android:gravity="center"
        />



    <Button
        android:id="@+id/buttonsquadt"
        android:layout_marginTop="16dp"
        style="@style/Theme.Hooking.BUTTON."
        android:text="@string/indivdual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcap" />

    <Button
        android:id="@+id/buttonsduplat"
        style="@style/Theme.Hooking.BUTTON."
        android:text="@string/dupla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsquadt" />

</androidx.constraintlayout.widget.ConstraintLayout>
