<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgradient">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circlefish"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_champions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asul"
        android:text="@string/campeonato_de_pesca"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/circlefish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_slect_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/asul"
        android:text="@string/selecione_o_per_odo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_champions" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/asul"
        android:text="@string/data_de_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_slect_date" />


    <TextView
        android:id="@+id/txt_slect_date_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/asul"
        android:text="@string/selecione_o_per_odo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_champions"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonfinish"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asul"
        android:layout_marginTop="16dp"
        android:text="Data Final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/txt_slect_date_finish" />

    <Button
        android:id="@+id/button_save_start"
        style="@style/Theme.Hooking.BUTTON."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStart"
        android:layout_marginTop="16dp"
        android:text="@string/salvar"/>

</androidx.constraintlayout.widget.ConstraintLayout>